--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                             </fieldset>
                             <fieldset class="size circle">
                                 <legend>Wymiary</legend>
-                                <label>Średnica:</label>
+                                <label class="size-description">Średnica:</label>
                                 <input type="text" placeholder="cm"  /> 
                             </fieldset>
                             <fieldset class="size square">
                                 <legend>Wymiary</legend>
-                                <label>Bok:</label>
+                                <label class="size-description">Bok:</label>
                                 <input type="text" placeholder="cm" /> 
                             </fieldset>
                             <fieldset class="size rect">
                                 <legend>Wymiary</legend>
-                                <label>Boki:</label>
+                                <label class="size-description">Boki:</label>
                                 <input type="text" placeholder="cm"  id="side-a-recipe"/>
                                 <span>x</span>
                                 <input type="text" placeholder="cm"  id="side-b-recipe"/>  
@@ -80,17 +80,17 @@
                             </fieldset>
                             <fieldset class="size circle">
                                 <legend>Wymiary</legend>
-                                <label>Średnica:</label>
+                                <label class="size-description">Średnica:</label>
                                 <input type="text" placeholder="cm"  />
                             </fieldset>
                             <fieldset class="size square">
                                 <legend>Wymiary</legend>
-                                <label>Bok:</label>
+                                <label class="size-description">Bok:</label>
                                 <input type="text" placeholder="cm" /> 
                             </fieldset>
                             <fieldset class="size rect">
                                 <legend>Wymiary</legend>
-                                <label>Boki:</label>
+                                <label class="size-description">Boki:</label>
                                 <input type="text" placeholder="cm"  id="side-a-resources"/>
                                 <span>x</span>
                                 <input type="text" placeholder="cm"  id="side-b-resources"/>  
