--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
                     </section>
                 </div>
             </main>
-            <footer> 
+<!--             <footer> 
                 <ul>
                     <li>&copy; Magda Mielczarek</li>
                     <li><a class="flaticon-github-sign" href="https://github.com/magdamielczarek" alt="go to author's github profile" target="_blank"></a></li>
                     <li><a class="flaticon-linkedin-logo" href="https://www.linkedin.com/in/magda-mielczarek-20b06275/" alt="go to author's linkedin profile" target="_blank"></a></li>
                 </ul>
-            </footer>
+            </footer> -->
         </div>
         
 
